Fix server bar overflow bug

--- a/app/assets/stylesheets/base/default_styles.scss
+++ b/app/assets/stylesheets/base/default_styles.scss
@@ -2,7 +2,7 @@
     text-align: center;
     color: white;
     background-color: var(--logo-primary);
-    height: 44px;
+    min-height: 44px;
     border-radius: 3px;
     transition: background-color .2s ease;
 }
