--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -10,10 +10,12 @@ span, article, footer, time, small {
   font: inherit;
   color: inherit;
   text-align: inherit;
+  text-indent: 0;
   text-decoration: inherit;
   vertical-align: inherit;
-  box-sizing: inherit;
+  box-sizing: border-box;
   background: transparent;
+  list-style-type: none;
 }
 
 ul {
